--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -282,7 +282,7 @@ blockquote {
     margin: 1.5rem 0 1rem 0 !important;
     font-size: 16px !important;
     line-height: 1.4em ;
-    font-family: 'Muli', Arial, Helvetica, sans-serif;
+    font-family: $ds44-font-family-base;
 }
 
 /* Tables */
