--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -45,8 +45,8 @@
 }
 
 .ds44-box-heading {
-    @include ds44-font-sizes(h4);
-    font-weight: $weight-bold;
+    @include ds44-font-sizes(h3);
+    font-weight: $weight-semibold;
     font-family: $ds44-font-family-base;
     background: transparent;
     padding: 0;
