Evol Charte push #3

--- a/framework/scss/components/_breadcrumb.scss
+++ b/framework/scss/components/_breadcrumb.scss
@@ -5,6 +5,7 @@
 .ds44-breadcrumb {
     margin-left: 3rem;
     font-size: 0.875em;
+    margin-bottom: $ds44-large-vmargin;
 }
 
 .ds44-breadcrumb_item {
