--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -92,7 +92,7 @@ h2, .h2-like {
   }
 
   &.ds44-theme {
-    background: linear-gradient(to bottom, $ds44-contextual-color 55%, rgba(255, 255, 255, 1) 55% )!important;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 55%, rgba(255, 255, 255, 1) 55% )!important;
   }
 
   &.ds44-dark {
