--- a/framework/scss/components/_overlays.scss
+++ b/framework/scss/components/_overlays.scss
@@ -161,7 +161,7 @@
 
         .ds44-cardTitle {
             font-family: $ds44-font-family-headings;
-            font-size: 1.8rem!important;
+            // font-size: 1.8rem!important;
         }
 
         &.ds44-cardIsFocus {
