Fix bug nom de class
Même nom de class ds44-cardTitle et ds44-card__title
On garde ds44-card__title partout

--- a/docs/_includes/card/card--selection.html
+++ b/docs/_includes/card/card--selection.html
@@ -12,7 +12,7 @@
       </button>
     </p>
     <div class="ds44-innerBoxContainer">
-        <p role="heading" aria-level="2" class="h4-like ds44-cardTitle" id="{{ include.idTuile }}"><a href="#" class="ds44-card__globalLink">{{ include.titreTuile }}</a></p>
+        <p role="heading" aria-level="2" class="h4-like ds44-card__title" id="{{ include.idTuile }}"><a href="#" class="ds44-card__globalLink">{{ include.titreTuile }}</a></p>
         <hr class="mbs" aria-hidden="true" />
         {{ include.cardContent }}
     </div>
