--- a/framework/scss/_config/_contextual-variables-parents.scss
+++ b/framework/scss/_config/_contextual-variables-parents.scss
@@ -27,6 +27,6 @@ $ds44-font-family-headings  : "Poppins", sans-serif;
   }
 }
 
-.ds44-card .ds44-cardTitle {
+.ds44-card .ds44-card__title {
   font-size: 2.2rem!important;
 }
