--- a/framework/scss/components/_overlays.scss
+++ b/framework/scss/components/_overlays.scss
@@ -159,7 +159,7 @@
         background: #ffffff !important;
         margin: 0 !important;
 
-        .ds44-cardTitle {
+        .ds44-card__title {
             font-family: $ds44-font-family-headings;
             // font-size: 1.8rem!important;
         }
