--- a/docs/_includes/card/card--assmat-accueil.html
+++ b/docs/_includes/card/card--assmat-accueil.html
@@ -1,6 +1,6 @@
 <section class="ds44-card ds44-card--noLink ds44-card--contact">
     <div class="ds44-card__section txtleft">
-        <p role="heading" aria-level="3" class="h4-like ds44-cardTitle">{{ include.nom }}</p>
+        <p role="heading" aria-level="3" class="h4-like ds44-card__title">{{ include.nom }}</p>
         <p class="ds44-docListElem ds44-mt-std"><i class="icon icon-date ds44-docListIco" aria-hidden="true"></i>Date déclaration : 15/09/2020 <br/>Date accueil : 01/09/2020</p>
         <hr class="mbm mtm" aria-hidden="true"/>
         <ul class="">
