--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -159,7 +159,7 @@
       font-family: $ds44-font-family-headings;
     }
     line-height: 1.1;
-    font-weight:$weight-medium;
+    font-weight:$weight-semibold;
 }
 
 .ds44-boxPushContent {
