--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -124,6 +124,12 @@
     &--light {
       width: 100px;
     }
+
+    + p, + div {
+        .wysiwyg strong {
+            font-weight: 400;
+        }
+    }
 }
 
 // Chiffres clés
@@ -131,6 +137,7 @@
 .ds44-numberIncrement {
   display: inline-block !important;
   flex-shrink: 0;
+  font-weight: 600;
 
   + .h1-like {
     display: inline-block !important;
@@ -267,6 +274,10 @@
 
       .ds44-collapser_element {
         border : 0;
+
+        > p {
+            margin-bottom: 0;
+        }
 
         .ds44-collapser_button {
           text-align: center;
