--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -342,7 +342,7 @@ body.modern {
         padding-left: $ds44-padding-box;
 
         .ds44-card__title {
-            font-size: 1.6rem;
+            font-size: 1em;
         }
     }
 }
