--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -91,7 +91,7 @@ input:-webkit-autofill {
 
     .ds44-labelTypePlaceholderLarge {
         span {
-            font-size: 1.6rem;
+            font-size: 1em;
             margin-top: $ds44-padding-large;
         }
     }
@@ -606,7 +606,7 @@ input[type=radio],
 }
 
 .ds44-labelLarge {
-    font-size: 1.6rem;
+    font-size: 1em;
     line-height: 1rem;
 }
 
