--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -24,7 +24,7 @@
 
 .ds44-titreLogo {
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 1em;
     line-height: 1.2;
     font-weight: bold;
     margin-left: 2rem;
