--- a/framework/scss/components/_list.scss
+++ b/framework/scss/components/_list.scss
@@ -176,7 +176,7 @@
         padding-left: 20px;
         background: url(../../../assets/images/right.svg) no-repeat left -9px;
         background-size: 20px;
-        font-size: 1.6rem;
+        font-size: 1em;
     }
 }
 
