--- a/framework/scss/components/_buttons.scss
+++ b/framework/scss/components/_buttons.scss
@@ -594,7 +594,7 @@ a.ds44-btnStd--retourPage {
     }
 }
 .dobree-link-2 {
-    font-size: 16px;
+    font-size: 1em;
     margin-bottom: 1rem;
     position: relative;
     text-decoration: none;
