--- a/framework/scss/components/_menu.scss
+++ b/framework/scss/components/_menu.scss
@@ -326,7 +326,7 @@
   }
   .ds44-menuLink {
       font-family: $ds44-font-family-baseModern;
-      font-size: 16px;
+      font-size: 1em;
       margin-bottom: 1rem;
       position: relative;
 
