--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -204,7 +204,7 @@ h6, .h6-like {
 .p-like {
   margin: 0 !important;
   padding: 0 !important;
-  font-size: 16px;
+  font-size: 1em;
   color: $ds44-color-base;
   font-family: $ds44-font-family-base;
   line-height: $ds44-line-height-base;
