Fix Phylactere : affichage dans  header

--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -32,7 +32,7 @@
 
 /* Phylactère */
 
-.phylactere .ds44-container-large .ds44-flex-container:before {
+.phylactere .ds44-header .ds44-container-large .ds44-flex-container:before {
     content: '';
     width: 80px;
     height: 34px;
