--- a/framework/scss/components/_list.scss
+++ b/framework/scss/components/_list.scss
@@ -142,6 +142,7 @@
     position: relative;
     padding-left: $ds44-padding-ico;
     line-height: 1.4;
+    font-size: .875em ;   // 14px
 
     .ds44-cardFile {
         display: block;
