--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -831,6 +831,7 @@
 
 .ds44-img50 {
     background: linear-gradient(to bottom, $ds44-light-bg 50%, $ds44-light 50%);
+    margin-top:-2px;
 }
 
 // Thematic color button More / Less Espace Collection
