--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -256,14 +256,8 @@
         text-align: center;
         margin: 0;
         position: relative;
-        padding-left: $ds44-padding-xxlarge;
+        padding-left: $ds44-padding-xlarge;
         display: inline-block;
-
-        @media (max-width: $ds44-medium  - .0625) {
-            .icon {
-               display: none;
-           }
-        }
 
        .icon {
           left: 0;
@@ -292,6 +286,11 @@
         .ds44-collapser_button {
           text-align: center;
           border: 2px solid transparent;
+          padding: 1.5rem 5rem 1.5rem 5rem;
+
+          @media (max-width: $ds44-small - .0625) {
+              padding: 1.5rem 4rem 1.5rem 4rem;
+          }
 
           &:focus {
               border: 2px solid $ds44-error;
