--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -110,6 +110,25 @@
         }
     }
 
+    .ds44-card__title,
+    .ds44-facette__title {
+        margin-bottom: $headings-margin-bottom;
+        padding: 0;
+        font-size: 1.0625em ; // 17px
+        font-weight: $weight-semibold;
+        line-height: 1.3;
+        background: transparent;
+        font-family: $ds44-font-family-base;
+    }
+
+    .ds44-cardDate,
+    .ds44-cardLocalisation,
+    .ds44-docListElem,
+    p,
+    .ds44-btnStd--tag {
+        font-size: .875em ; // 14px
+    }
+
     &.ds44-card--dobree {
         height: 100%;
         margin-bottom: 0;
@@ -280,21 +299,6 @@ figure[role=figure]  + .ds44-card__section {
     &:hover,
     &:active {
         text-decoration: none;
-    }
-}
-
-.ds44-card__title,
-.ds44-facette__title {
-    margin-bottom: $headings-margin-bottom;
-    padding: 0;
-    font-size: 1.0625em ; // 17px
-    font-weight: $weight-semibold;
-    line-height: 1.3;
-    background: transparent;
-    font-family: $ds44-font-family-base;
-
-    @media (max-width: $ds44-small - .0625) {
-        font-size: 1.0625em // 17px
     }
 }
 
@@ -665,7 +669,6 @@ a {
 
 .ds44-cardDate,
 .ds44-cardLocalisation {
-    font-size: .875em;
 
     .icon {
         font-size: 1.2rem;
