--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -70,7 +70,7 @@
     border: none;
   }
 
-  &.dobree-collapser {
+  &.ds44-collapser--bigger {
       .ds44-collapser_element{
           border: 0;
           margin-bottom: 5px;
@@ -78,11 +78,8 @@
       .ds44-collapser_button {
           background: $ds44-contextual-color;
           font-size: 1.375em;
+          font-weight: $weight-semibold;
           padding: 2rem 8rem 2rem 4rem;
-
-          @media (max-width: $medium - .0625) {
-              font-size: 1.25em;
-          }
 
           .icon {
               right: 4rem;
