--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -466,7 +466,7 @@ a {
             background: none;
 
             + .wysiwyg {
-                margin-top:0;
+                margin-top:0 !important;
             }
 
             &:after {
