--- a/framework/scss/components/_overlays.scss
+++ b/framework/scss/components/_overlays.scss
@@ -152,6 +152,32 @@
         }
     }
 
+    .ds44-card__title {
+        font-family: $ds44-font-family-headings !important;
+        font-size: 1.6rem !important;
+        font-weight: $weight-semibold;
+    }
+
+    .ds44-docListElem {
+        margin-top: 1rem !important;
+        font-size: 1.2rem !important;
+        font-family: $ds44-font-family-headings !important;
+    }
+    .ds44-cardDate, .ds44-cardLocalisation {
+        font-size: 1.2rem !important;
+        font-family: $ds44-font-family-headings !important;
+    }
+
+    @media (max-width: $ds44-small) {
+        .ds44-card__title {
+            font-size: 1.4rem !important;
+        }
+
+        .ds44-docListElem {
+            font-size: 1rem !important;
+        }
+    }
+
     & .ds44-js-card {
         cursor: pointer;
         z-index: 700;
@@ -159,30 +185,9 @@
         background: #ffffff !important;
         margin: 0 !important;
 
-        .ds44-card__title {
-            font-family: $ds44-font-family-headings !important;
-            font-size: 1.6rem !important;
-        }
-
         &.ds44-cardIsFocus {
             background-color: #99E6D1 !important;
             border-color: #666;
-        }
-
-        .ds44-docListElem {
-            margin-top: 1rem !important;
-            font-size: 1.2rem !important;
-            font-family: $ds44-font-family-headings !important;
-        }
-
-        @media (max-width: $ds44-small) {
-            .ds44-card__title {
-                font-size: 1.4rem !important;
-            }
-
-            .ds44-docListElem {
-                font-size: 1rem !important;
-            }
         }
 
         .ds44-flex-container {
