--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -434,9 +434,11 @@
       }
   }
 
-  .phylactere .ds44-header {
+  .ds44-header {
       min-height: $header-height-small;
-
+  }
+  
+  .phylactere .ds44-header {
         .ds44-container-large .ds44-flex-container::before {
           width: 50px;
           height: 23px;
