--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -398,6 +398,13 @@ body.modern {
         z-index: 100;
         font-weight: $weight-bold;
         font-size: 3em;
+        max-width: 95vw;
+
+        @media (max-width: $ds44-small - .0625) {
+            padding: 10rem 2rem 5rem 2rem;
+            font-size: 2.4em;
+        }
+
     }
 
 }
