--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -444,6 +444,15 @@
           left: 14px;
         }
   }
+  
+  .phylactere .ds44-header {
+        .ds44-container-large .ds44-flex-container::before {
+          width: 50px;
+          height: 23px;
+          bottom: -21px;
+          left: 14px;
+        }
+  }
 
   .ds44-header.dobree-header .ds44-colRight .ds44-btnIcoText--maxi.ds44-btn--menu {
    padding: 1em;
