--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -433,10 +433,12 @@
           }
       }
   }
+  
+  .ds44-header {
+    min-height: $header-height-small;
+  }
 
   .phylactere .ds44-header {
-      min-height: $header-height-small;
-
         .ds44-container-large .ds44-flex-container::before {
           width: 50px;
           height: 23px;
