Hot fix marges (#428)
* Fix : on remet les anciennes tailles de police pour la css du site institutionnel
En attendant la petite refonte graphique où les tailles seront harmonisées

* Fix : suppression surlignage sous-titre

* Modification fonts logo Poppins

* Ajustement logo mdph

* Delete old logo mdph

* Delete logo Agenda des sorties

* Mise à jour des couleurs identitaires cf nouveau nuancier

* Evol charte

Espacement des tags avec le titre sur les cards partenaire
Réduction de la graisse sur les introductions (exemple article)
Masquage des background pattern sur les blocs
Ajout de graisse sur les titres des cards GLPA

* Evol charte

Modification des explications des typographies sur le DS
Ajout du dossier de téléchargement de le police Poppins
Réduction de la taille des H1 en tablet et desktop (48px > 42px / 50px > 46px)
Augmentation des H2  en tablet et desktop (28px > 30px / 28px > 32px)

* Evol Header shape Charte

* Maj shape Logo

* Maj header shape media queries

* Modification Logos RS

Supprimer X et remplacer par linkedin partout
Modification de l'ordre des logos
Ajout de TikTok

* Evol charte

- Modification titre card 1.7rem => 1.9rem (sauf sur carte horizonal et mur 6 cards)
- Harmonisation des tailles chapo et boutons => 1.7rem
Réduction taille titre pushTitle

* Fix : Remonter le chapo sous le titre H1

* Fix taille chapo VS introduction

* Ajustements Page article

* Fix : inclusion de la Poppins via import pour différentes css + réinit tailles typos pour institutionnel

* Fix Orejime : on pointe vers la 1.2.3 au lieu de la "latest" car bug.

* Fix : error travis password

* Evol charte maj

Mise à jour des tailles de polices cf fichier excel Gaëlle

* Evol charte maj #2

* Evol Charte push #3

* Fix JALIOS-241 : mots coupés

* Evol Charte #4

* Evol charte #5

* Fix bug nom de class

Même nom de class ds44-cardTitle et ds44-card__title
On garde ds44-card__title partout

* Evol charte #6

* Evol Charte #7

* Evol charte #8

* Evol : conf pour

--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -433,10 +433,21 @@
           }
       }
   }
+  
+  .ds44-header {
+    min-height: $header-height-small;
+  }
 
   .phylactere .ds44-header {
-      min-height: $header-height-small;
-
+        .ds44-container-large .ds44-flex-container::before {
+          width: 50px;
+          height: 23px;
+          bottom: -21px;
+          left: 14px;
+        }
+  }
+  
+  .phylactere .ds44-header {
         .ds44-container-large .ds44-flex-container::before {
           width: 50px;
           height: 23px;
