--- a/framework/scss/_libraries/_responsive.scss
+++ b/framework/scss/_libraries/_responsive.scss
@@ -474,11 +474,11 @@
 }
 
 @media (max-width: $ds44-tiny - .0625) {
-
+/*
   .ds44-tiny-reducedFont {
     font-size: smaller;
   }
-
+*/
   .ds44-tiny-extra-mb {
     margin-bottom: $ds44-components-vmargin !important;
   }
