--- a/framework/scss/_config/_contextual-variables-museeDobree.scss
+++ b/framework/scss/_config/_contextual-variables-museeDobree.scss
@@ -91,4 +91,9 @@ body.modern {
             }
         }
     }
+
+    *, ::before, ::after {
+      -webkit-box-sizing: inherit;
+      box-sizing: inherit;
+    }
 }
