--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -26,9 +26,9 @@
       }
     }
 
-    .ds44-collapser_content li {
+    .ds44-collapser_content > li {
       //list-style: none;
-      margin-top: 0;
+      margin-top: 0rem;
 
       > ul > li:first-child {
         margin-top: 0;
