Evol Apps Pont et Bacs de Loire

--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -146,6 +146,10 @@
     }
   }
 
+  &.ds44-btnStd {
+      padding: $ds44-padding-box 3.5rem $ds44-padding-box $ds44-padding-box ;
+  }
+
 }
 
 .ds44-collapser_content {
