--- a/framework/scss/apps/_pont.scss
+++ b/framework/scss/apps/_pont.scss
@@ -74,7 +74,7 @@
 
 .ds44-app-tuile {
 
-	p { @include ds44-font-sizes(smallText); }
+	p { font-size : 1em ; }
 	line-height: 1.3;
 
 	.ds44-titre-alerte {
@@ -123,7 +123,7 @@
     font-weight: bold;
 }
 .ds44-bacs-horaire, p.ds44-bacs-horaire {
-	@include ds44-font-sizes(xxlText);
+	font-size: 2em; // 28px;
 	@if variable_exists(ds44-font-family-headings) and $ds44-font-family-headings != $ds44-font-family-base{
 		font-family: $ds44-font-family-headings;
 	  }
@@ -139,7 +139,7 @@
 	}
 
 	&--actif {
-		font-size: 3.0625em;
+		font-size: 2.375em;
 	}
 }
 
@@ -147,7 +147,7 @@
 
 	.ds44-bacs-horaire, p.ds44-bacs-horaire {
 		&--actif {
-			font-size: 4em;
+			font-size: 3em;
 		}
 	}
 }
